docs/research/performance-architecture-20260930/cohere1024/native-s3-query-admission/a0001/main-route-table.json
{
    "RouteTables": [
        {
            "Associations": [
                {
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-09ddfb6348160d319",
                    "RouteTableId": "rtb-00bee42cca694f79b",
                    "AssociationState": {
                        "State": "associated"
                    }
                }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-00bee42cca694f79b",
            "Routes": [
                {
                    "DestinationCidrBlock": "172.31.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "GatewayId": "igw-0ecf282bbd1946fac",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-02bed5aadbc3c0a2d",
            "OwnerId": "453182569524"
        }
    ]
}
